--- a/Documents/land_doc.html
+++ b/Documents/land_doc.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>species_doc</title>
+<title>land_doc</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13077,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Documentaci&#243;n-de-la-clase-Specie">Documentaci&#243;n de la clase Specie<a class="anchor-link" href="#Documentaci&#243;n-de-la-clase-Specie">&#182;</a></h2><p>Con esta clase definimos nuestra specie, esta consta de un nombre, que es pasado por argumento al crear una instancia, adicionalmente tiene <strong>características</strong> y <strong>dependencias</strong>. Por defecto se crea una característica "<em>population</em>" con valor 1, la que puede modificarse y/o eliminar si así se desea.</p>
+<h2 id="Documentaci&#243;n-de-la-clase-Land">Documentaci&#243;n de la clase Land<a class="anchor-link" href="#Documentaci&#243;n-de-la-clase-Land">&#182;</a></h2><p>Con esta clase definimos nuestra "tierra" o el mapa, esta consta de <strong>características</strong> y <strong>dependencias</strong>.</p>
 
 </div>
 </div>
@@ -13090,11 +13090,11 @@ div#notebook {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">from</span> <span class="nn">sys</span> <span class="k">import</span> <span class="n">path</span>
 <span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">,</span><span class="n">os</span><span class="o">.</span><span class="n">pardir</span><span class="p">)))</span>
-<span class="kn">from</span> <span class="nn">species</span> <span class="k">import</span> <span class="n">Species</span>
+<span class="kn">from</span> <span class="nn">land</span> <span class="k">import</span> <span class="n">Land</span>
 
-<span class="n">humano</span> <span class="o">=</span> <span class="n">Species</span><span class="p">(</span><span class="s1">&#39;Humano&#39;</span><span class="p">)</span>
+<span class="n">terreno</span> <span class="o">=</span> <span class="n">Land</span><span class="p">()</span>
 
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">characteristic_dependences</span><span class="p">)</span>
+<span class="p">(</span><span class="n">terreno</span><span class="o">.</span><span class="n">characteristic</span><span class="p">,</span> <span class="n">terreno</span><span class="o">.</span><span class="n">characteristic_dependences</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13113,7 +13113,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>(&#39;Humano&#39;, {&#39;population&#39;: 1}, [])</pre>
+<pre>({}, [])</pre>
 </div>
 
 </div>
@@ -13125,7 +13125,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Caracter&#237;sticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter&#237;sticas">&#182;</a></h3><p>Una especie posee una lista de <strong>características</strong> propias como pueden ser población, tamaño, natalidad, economía, etc.</p>
+<h3 id="Caracter&#237;sticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter&#237;sticas">&#182;</a></h3><p>Un terreno posee una lista de <strong>características</strong> propias como pueden ser recursos actuales, capacidad, fertilidad, temperatura, altura, etc.</p>
 <p>La misma es representada como una diccionario y se puede interactuar con ella usando los métodos <em>Change_Characteristic</em> el que recibe como entrada el nombre de la característica y su valor, si existe la modifica sino se agrega, y el método <em>Delete_Characteristic</em> que recibe de entrada el nombre de la característica que quieres borrar y la elimina. Las características pueden tomar valor numérico o rangos.</p>
 
 </div>
@@ -13136,13 +13136,14 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="mi">50</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;size&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Delete_Characteristic</span><span class="p">(</span><span class="s1">&#39;size&#39;</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;size&#39;</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;reproduction_number&#39;</span><span class="p">,</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span><span class="mi">2</span><span class="p">])</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">terreno</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;actual_resources&#39;</span><span class="p">,</span> <span class="mi">500</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Delete_Characteristic</span><span class="p">(</span><span class="s1">&#39;fertility&#39;</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="p">[</span><span class="mi">2</span><span class="p">,</span><span class="mi">8</span><span class="p">])</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="p">[</span><span class="mi">25</span><span class="p">,</span><span class="mi">60</span><span class="p">])</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s1">&#39;temperature&#39;</span><span class="p">,</span> <span class="mi">25</span><span class="p">)</span>
     
-<span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">characteristic</span>
 </pre></div>
 
     </div>
@@ -13161,7 +13162,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>{&#39;population&#39;: 50, &#39;size&#39;: 2, &#39;reproduction_number&#39;: [0, 2]}</pre>
+<pre>{&#39;actual_resources&#39;: 500, &#39;fertility&#39;: [25, 60], &#39;temperature&#39;: 25}</pre>
 </div>
 
 </div>
@@ -13173,7 +13174,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Dependences">Dependences<a class="anchor-link" href="#Dependences">&#182;</a></h3><p>Una especie puede además poseer <strong>dependencias</strong> entre las características para expresar por ejemplo como influye la natalidad en la población al pasar un día, o como influye el avance médico en la esperanza de vida
+<h3 id="Dependences">Dependences<a class="anchor-link" href="#Dependences">&#182;</a></h3><p>Un terreno puede además poseer <strong>dependencias</strong> entre las características para expresar por ejemplo como influye la natalidad en la población al pasar un día, o como influye el avance médico en la esperanza de vida
 Estas dependencias son representadas con una lista de listas.</p>
 <p>Cada dependencia es una lista de 3 elementos: característica a, característica b, c. 
 Al pasar un dia se dice que ocurre <strong>a -&gt; b * c</strong>, que se traduce a: <em>b += a </em> c* 
@@ -13188,13 +13189,14 @@ Si entre las características hay una que tiene de valor un rango entonces se ha
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">humano</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;reproduction_number&#39;</span><span class="p">,</span> <span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="mi">5</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="s1">&#39;size&#39;</span><span class="p">,</span> <span class="mf">0.1</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Change_Dependences_Value</span><span class="p">(</span><span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="s1">&#39;size&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mf">0.001</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Delete_Dependences</span><span class="p">(</span><span class="s1">&#39;population&#39;</span><span class="p">,</span> <span class="s1">&#39;population&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">terreno</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;temperature&#39;</span><span class="p">,</span> <span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;actual_resources&#39;</span><span class="p">,</span> <span class="s1">&#39;actual_resources&#39;</span><span class="p">,</span> <span class="mf">0.05</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="s1">&#39;actual_resources&#39;</span><span class="p">,</span> <span class="mf">5.5</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Add_Dependences</span><span class="p">(</span><span class="s1">&#39;actual_resources&#39;</span><span class="p">,</span> <span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="mf">0.001</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Change_Dependences_Value</span><span class="p">(</span><span class="s1">&#39;temperature&#39;</span><span class="p">,</span> <span class="s1">&#39;fertility&#39;</span><span class="p">,</span> <span class="o">-</span><span class="mf">0.15</span><span class="p">)</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">Delete_Dependences</span><span class="p">(</span><span class="s1">&#39;actual_resources&#39;</span><span class="p">,</span> <span class="s1">&#39;fertility&#39;</span><span class="p">)</span>
 
-<span class="n">humano</span><span class="o">.</span><span class="n">characteristic_dependences</span>
+<span class="n">terreno</span><span class="o">.</span><span class="n">characteristic_dependences</span>
 </pre></div>
 
     </div>
@@ -13213,7 +13215,9 @@ Si entre las características hay una que tiene de valor un rango entonces se ha
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[[&#39;reproduction_number&#39;, &#39;population&#39;, 3], [&#39;population&#39;, &#39;size&#39;, -0.001]]</pre>
+<pre>[[&#39;temperature&#39;, &#39;fertility&#39;, -0.15],
+ [&#39;actual_resources&#39;, &#39;actual_resources&#39;, 0.05],
+ [&#39;fertility&#39;, &#39;actual_resources&#39;, 5.5]]</pre>
 </div>
 
 </div>
@@ -13235,11 +13239,11 @@ Si entre las características hay una que tiene de valor un rango entonces se ha
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">time_line</span> <span class="o">=</span> <span class="p">[</span><span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="o">.</span><span class="n">copy</span><span class="p">()]</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">time_line</span> <span class="o">=</span> <span class="p">[</span><span class="n">terreno</span><span class="o">.</span><span class="n">characteristic</span><span class="o">.</span><span class="n">copy</span><span class="p">()]</span>
 <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">10</span><span class="p">):</span>
     <span class="c1"># Avanza un día la simulación</span>
-    <span class="n">humano</span><span class="o">.</span><span class="n">Move_One_Day</span><span class="p">()</span>
-    <span class="n">time_line</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="o">.</span><span class="n">copy</span><span class="p">())</span>
+    <span class="n">terreno</span><span class="o">.</span><span class="n">Move_One_Day</span><span class="p">()</span>
+    <span class="n">time_line</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">terreno</span><span class="o">.</span><span class="n">characteristic</span><span class="o">.</span><span class="n">copy</span><span class="p">())</span>
     
 <span class="n">time_line</span>
 </pre></div>
@@ -13260,17 +13264,33 @@ Si entre las características hay una que tiene de valor un rango entonces se ha
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[{&#39;population&#39;: 50, &#39;size&#39;: 2, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 50, &#39;size&#39;: 1.95, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 50, &#39;size&#39;: 1.9, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 53, &#39;size&#39;: 1.847, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 53, &#39;size&#39;: 1.794, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 59, &#39;size&#39;: 1.735, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 65, &#39;size&#39;: 1.6700000000000002, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 71, &#39;size&#39;: 1.5990000000000002, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 71, &#39;size&#39;: 1.5280000000000002, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 77, &#39;size&#39;: 1.4510000000000003, &#39;reproduction_number&#39;: [0, 2]},
- {&#39;population&#39;: 83, &#39;size&#39;: 1.3680000000000003, &#39;reproduction_number&#39;: [0, 2]}]</pre>
+<pre>[{&#39;actual_resources&#39;: 500, &#39;fertility&#39;: [25, 60], &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 679.0, &#39;fertility&#39;: [21.25, 56.25], &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 943.95, &#39;fertility&#39;: [17.5, 52.5], &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 1073.6475,
+  &#39;fertility&#39;: [13.75, 48.75],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 1187.8298750000001,
+  &#39;fertility&#39;: [10.0, 45.0],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 1379.2213687500002,
+  &#39;fertility&#39;: [6.25, 41.25],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 1618.6824371875002,
+  &#39;fertility&#39;: [2.5, 37.5],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 1809.6165590468752,
+  &#39;fertility&#39;: [-1.25, 33.75],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 1993.597386999219,
+  &#39;fertility&#39;: [-5.0, 30.0],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 2203.27725634918,
+  &#39;fertility&#39;: [-8.75, 26.25],
+  &#39;temperature&#39;: 25},
+ {&#39;actual_resources&#39;: 2318.941119166639,
+  &#39;fertility&#39;: [-12.5, 22.5],
+  &#39;temperature&#39;: 25}]</pre>
 </div>
 
 </div>
