--- a/Documents/land_doc.html
+++ b/Documents/land_doc.html
@@ -14618,7 +14618,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>({&#39;&#39;: &lt;Simulation.land.Land at 0x2286b7c2110&gt;}, {}, [])</pre>
+<pre>({&#39;&#39;: &lt;Simulation.land.Land at 0x22ddca82e00&gt;}, {}, [])</pre>
 </div>
 
 </div>
@@ -14684,9 +14684,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>{&#39;&#39;: &lt;Simulation.land.Land at 0x2286b7c2110&gt;,
- &#39;cubano&#39;: &lt;Simulation.society.Society at 0x2286b7c2980&gt;,
- &#39;español&#39;: &lt;Simulation.society.Society at 0x2286b7c2410&gt;}</pre>
+<pre>{&#39;&#39;: &lt;Simulation.land.Land at 0x22ddca82e00&gt;,
+ &#39;cubano&#39;: &lt;Simulation.society.Society at 0x22ddca81960&gt;,
+ &#39;español&#39;: &lt;Simulation.society.Society at 0x22ddc9dce50&gt;}</pre>
 </div>
 
 </div>
@@ -14769,8 +14769,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>{&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
- &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;}</pre>
+<pre>{&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+ &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;}</pre>
 </div>
 
 </div>
@@ -14825,9 +14825,9 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>({&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
+<pre>({&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
  [3, 9])</pre>
 </div>
 
@@ -14899,12 +14899,12 @@ Si entre las características hay una que tiene de valor un rango entonces se ha
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>([&lt;Simulation.dependence.Dependence at 0x22871b0edd0&gt;,
-  &lt;Simulation.dependence.Dependence at 0x22871b0f2e0&gt;,
-  &lt;Simulation.dependence.Dependence at 0x22871b0eb90&gt;],
- [&lt;Simulation.dependence.Dependence at 0x22871b0f0d0&gt;,
-  &lt;Simulation.dependence.Dependence at 0x22871b0f0a0&gt;,
-  &lt;Simulation.dependence.Dependence at 0x22871b0f820&gt;])</pre>
+<pre>([&lt;Simulation.dependence.Dependence at 0x22ddc9de3e0&gt;,
+  &lt;Simulation.dependence.Dependence at 0x22ddc9de8f0&gt;,
+  &lt;Simulation.dependence.Dependence at 0x22ddc9de3b0&gt;],
+ [&lt;Simulation.dependence.Dependence at 0x22ddc9de8c0&gt;,
+  &lt;Simulation.dependence.Dependence at 0x22ddc9de380&gt;,
+  &lt;Simulation.dependence.Dependence at 0x22ddc9dd510&gt;])</pre>
 </div>
 
 </div>
@@ -14975,39 +14975,39 @@ Primero ejecuta todas las dependencias guardando en una lista los cambios, luego
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>[{&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;},
- {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0ec20&gt;,
-  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f040&gt;,
-  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22871b0f880&gt;}]</pre>
+<pre>[{&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;},
+ {&#39;actual_resources&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca827a0&gt;,
+  &#39;temperature&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca82890&gt;,
+  &#39;fertility&#39;: &lt;Simulation.characteristic.Characteristic at 0x22ddca81e70&gt;}]</pre>
 </div>
 
 </div>
