--- a/Documents/auxiliars_doc.html
+++ b/Documents/auxiliars_doc.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>species_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>auxiliars_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14573,7 +14573,23 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Documentaci%C3%B3n-de-la-clase-Species">Documentaci&#243;n de la clase Species<a class="anchor-link" href="#Documentaci%C3%B3n-de-la-clase-Species">&#182;</a></h2><p>Con esta clase definimos nuestra "sociedad", esta consta de un <strong>nombre</strong> y <strong>características</strong>.</p>
+<h2 id="Documentaci%C3%B3n-de-las-clases-auxiliares-de-la-simulaci%C3%B3n">Documentaci&#243;n de las clases auxiliares de la simulaci&#243;n<a class="anchor-link" href="#Documentaci%C3%B3n-de-las-clases-auxiliares-de-la-simulaci%C3%B3n">&#182;</a></h2><ol>
+<li>Characteristic</li>
+<li>Dependence</li>
+<li>Operators</li>
+</ol>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="1.-Characteristic">1. Characteristic<a class="anchor-link" href="#1.-Characteristic">&#182;</a></h3><p>Clase donde se representan las características, esta contiene <strong>nombre</strong>, <strong>valor</strong>, <strong>límites</strong>, <strong>mutabilidad</strong> y función de distribución. Además contiene el método para modificarlos</p>
 
 </div>
 </div>
@@ -14589,12 +14605,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">from</span> <span class="nn">sys</span> <span class="kn">import</span> <span class="n">path</span>
 <span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">,</span><span class="n">os</span><span class="o">.</span><span class="n">pardir</span><span class="p">)))</span>
-<span class="kn">from</span> <span class="nn">Simulation.species</span> <span class="kn">import</span> <span class="n">Species</span>
-<span class="kn">from</span> <span class="nn">Simulation.society</span> <span class="kn">import</span> <span class="n">Society</span>
+<span class="kn">from</span> <span class="nn">Simulation.characteristic</span> <span class="kn">import</span> <span class="n">Characteristic</span>
+<span class="kn">from</span> <span class="nn">Simulation.dependence</span> <span class="kn">import</span> <span class="n">Dependence</span>
+<span class="kn">from</span> <span class="nn">Simulation.operators</span> <span class="kn">import</span> <span class="o">*</span>
 
-<span class="n">humano</span> <span class="o">=</span> <span class="n">Species</span><span class="p">(</span><span class="s1">&#39;Humano&#39;</span><span class="p">)</span>
-
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="p">)</span>
+<span class="n">char</span> <span class="o">=</span> <span class="n">Characteristic</span><span class="p">(</span><span class="s2">&quot;precipitacionnes&quot;</span><span class="p">,</span> <span class="mi">12</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">10000</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="o">*</span><span class="n">x</span><span class="p">)</span>
+<span class="n">char</span><span class="o">.</span><span class="n">Update_Characteristic_Value</span><span class="p">(</span><span class="o">-</span><span class="mi">1</span><span class="p">)</span>
+<span class="n">char</span><span class="o">.</span><span class="n">value</span>
 </pre></div>
 
      </div>
@@ -14618,14 +14635,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(&#39;Humano&#39;,
- {&#39;Poblacion&#39;: {&#39;summation&#39;: 0,
-   &#39;mean&#39;: 0,
-   &#39;initial&#39;: 10,
-   &#39;lower&#39;: 0,
-   &#39;upper&#39;: inf,
-   &#39;mutability&#39;: -1,
-   &#39;distr_function&#39;: None}})</pre>
+<pre>0</pre>
 </div>
 
 </div>
@@ -14641,20 +14651,12 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Caracter%C3%ADsticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter%C3%ADsticas">&#182;</a></h3><p>Las caracterísiticas en especies no son instancias de la clase Characterisitic, pues no es mas que los valores que se necesitan par isntanciar una a la vez que se cree una sociedad de esta especie.</p>
-<p>Para trabajas con las características se tienen los métodos:</p>
-<ul>
-<li><strong>Change_Characterisitic</strong>: Toma todos los valores iniciales para crear una característica y los guarda en un diccionario.</li>
-<li><strong>Change_Characterisitic_Value</strong>: Cambia el valor inicial de la característica.</li>
-<li><strong>Delete_Characcteristic</strong>: Elimina la característica de la lista.</li>
-<li><strong>Get_Characteristic_Summation</strong>: Obtiene la sumatioria de los valores de la característica en las sociedades que pertenecen a la especie.</li>
-<li><strong>Get_Characteristic_Mean</strong>: Obtiene la media de los valores de la característica en las sociedades que pertenecen a la especie.</li>
-</ul>
+<h3 id="2.-Dependence">2. Dependence<a class="anchor-link" href="#2.-Dependence">&#182;</a></h3><p>clase con la que ses representada una dependencia, influencia o interdependencia. Esta tiene la posición, entidad y características que se relacionan, además de c que sería la razón con que se relacionan y las funciones de suma y multiplicación de la dependencia.</p>
 
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -14662,43 +14664,12 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
-
-<span class="n">cubano</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;cubano&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">taino</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;taino&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">2</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span>
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">20</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">10</span> <span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">dep</span> <span class="o">=</span> <span class="n">Dependence</span><span class="p">([</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">],</span> <span class="s2">&quot;&quot;</span><span class="p">,</span><span class="s2">&quot;altura&quot;</span><span class="p">,[</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">],</span><span class="s2">&quot;atleta_no_boliviano&quot;</span><span class="p">,</span><span class="s2">&quot;rendimiento&quot;</span><span class="p">,</span><span class="o">-</span><span class="mi">2</span><span class="p">)</span>
 </pre></div>
 
      </div>
 </div>
 </div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[&nbsp;]:</div>
-
-
-
-
-<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(True, True)</pre>
-</div>
-
-</div>
-
-</div>
-
 </div>
 
 </div>
@@ -14708,7 +14679,23 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Además tiene un método Copy que devuelve una copia de la instancia</p>
+<h3 id="3.-Operators">3. Operators<a class="anchor-link" href="#3.-Operators">&#182;</a></h3><p>En este archivo guardamos todos los métodos complementarios que usamos a lo largo del proyecto, ejemplo:</p>
+<ul>
+<li><strong>default_sum</strong></li>
+<li><strong>default_mul</strong></li>
+<li><strong>dependence</strong></li>
+<li><strong>influence</strong></li>
+<li><strong>distribution_default</strong></li>
+</ul>
+<p>Además de varias distribuciones que puede usar el usuario:</p>
+<ul>
+<li><strong>uniform</strong></li>
+<li><strong>exponential</strong></li>
+<li><strong>gamma</strong></li>
+<li><strong>normal</strong></li>
+<li><strong>binomial</strong></li>
+<li><strong>geométrica</strong></li>
+</ul>
 
 </div>
 </div>
