--- a/Documents/runner_doc.html
+++ b/Documents/runner_doc.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>species_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>runner_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14573,142 +14573,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Documentaci%C3%B3n-de-la-clase-Species">Documentaci&#243;n de la clase Species<a class="anchor-link" href="#Documentaci%C3%B3n-de-la-clase-Species">&#182;</a></h2><p>Con esta clase definimos nuestra "sociedad", esta consta de un <strong>nombre</strong> y <strong>características</strong>.</p>
-
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
-<span class="kn">from</span> <span class="nn">sys</span> <span class="kn">import</span> <span class="n">path</span>
-<span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">,</span><span class="n">os</span><span class="o">.</span><span class="n">pardir</span><span class="p">)))</span>
-<span class="kn">from</span> <span class="nn">Simulation.species</span> <span class="kn">import</span> <span class="n">Species</span>
-<span class="kn">from</span> <span class="nn">Simulation.society</span> <span class="kn">import</span> <span class="n">Society</span>
-
-<span class="n">humano</span> <span class="o">=</span> <span class="n">Species</span><span class="p">(</span><span class="s1">&#39;Humano&#39;</span><span class="p">)</span>
-
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="p">)</span>
-</pre></div>
-
-     </div>
-</div>
-</div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[&nbsp;]:</div>
-
-
-
-
-<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(&#39;Humano&#39;,
- {&#39;Poblacion&#39;: {&#39;summation&#39;: 0,
-   &#39;mean&#39;: 0,
-   &#39;initial&#39;: 10,
-   &#39;lower&#39;: 0,
-   &#39;upper&#39;: inf,
-   &#39;mutability&#39;: -1,
-   &#39;distr_function&#39;: None}})</pre>
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Caracter%C3%ADsticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter%C3%ADsticas">&#182;</a></h3><p>Las caracterísiticas en especies no son instancias de la clase Characterisitic, pues no es mas que los valores que se necesitan par isntanciar una a la vez que se cree una sociedad de esta especie.</p>
-<p>Para trabajas con las características se tienen los métodos:</p>
-<ul>
-<li><strong>Change_Characterisitic</strong>: Toma todos los valores iniciales para crear una característica y los guarda en un diccionario.</li>
-<li><strong>Change_Characterisitic_Value</strong>: Cambia el valor inicial de la característica.</li>
-<li><strong>Delete_Characcteristic</strong>: Elimina la característica de la lista.</li>
-<li><strong>Get_Characteristic_Summation</strong>: Obtiene la sumatioria de los valores de la característica en las sociedades que pertenecen a la especie.</li>
-<li><strong>Get_Characteristic_Mean</strong>: Obtiene la media de los valores de la característica en las sociedades que pertenecen a la especie.</li>
-</ul>
-
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
-
-<span class="n">cubano</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;cubano&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">taino</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;taino&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">2</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span>
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">20</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">10</span> <span class="p">)</span>
-</pre></div>
-
-     </div>
-</div>
-</div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[&nbsp;]:</div>
-
-
-
-
-<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(True, True)</pre>
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Además tiene un método Copy que devuelve una copia de la instancia</p>
+<h2 id="Runner">Runner<a class="anchor-link" href="#Runner">&#182;</a></h2><p>El runner es un paso intermedio entre el simulation que se encuentra visible en el lenguaje definido para el usuario, y el Simulation que trabaja por detrás de eso con los datos. Básicamente podemos apreciar todas las funciones que son recogidas en el type_checker, y que son recibidas con sus parámetros, analizados para evitar errores innecesarios y aletar al usuario de esto (errores que son por norma general en tiempo de ejecución), y luego modificar las entradas y preparar estos datos para mandárselos a Simulation y que ahí sean debidamente procesados, puesto que la información que es enviada a Simulation es siempre una copia de la información que el usuario utiliza en el lenguaje, debido al manejo de referencias de Python</p>
+<p>La idea de esto es que sea utilizado en el main para cargar dinámicamente el código Python transpilado, y que haya una existencia de las funciones del lenguaje a la hora de ser invocadas.</p>
 
 </div>
 </div>
