--- a/Documents/simulation_doc.html
+++ b/Documents/simulation_doc.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>species_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>simulation_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14573,7 +14573,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Documentaci%C3%B3n-de-la-clase-Species">Documentaci&#243;n de la clase Species<a class="anchor-link" href="#Documentaci%C3%B3n-de-la-clase-Species">&#182;</a></h2><p>Con esta clase definimos nuestra "sociedad", esta consta de un <strong>nombre</strong> y <strong>características</strong>.</p>
+<h2 id="Documentaci%C3%B3n-de-la-clase-Simulation">Documentaci&#243;n de la clase Simulation<a class="anchor-link" href="#Documentaci%C3%B3n-de-la-clase-Simulation">&#182;</a></h2><p>Con esta clase definimos nuestra "simulación", esta consta de <strong>species</strong>, <strong>terrenos</strong> o un mapa, <strong>inter-dependencias</strong>. AL inicializarse una simulación se crea un mapa que no es más que una lista de listas de terrenos, a este se le puede aplizar elmmétodo <strong>redimention</strong> que recibe de entrada las nuevas dimensiones del mapa</p>
 
 </div>
 </div>
@@ -14589,12 +14589,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">from</span> <span class="nn">sys</span> <span class="kn">import</span> <span class="n">path</span>
 <span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">,</span><span class="n">os</span><span class="o">.</span><span class="n">pardir</span><span class="p">)))</span>
+<span class="kn">from</span> <span class="nn">Simulation.simulation</span> <span class="kn">import</span> <span class="n">Simulation</span>
 <span class="kn">from</span> <span class="nn">Simulation.species</span> <span class="kn">import</span> <span class="n">Species</span>
-<span class="kn">from</span> <span class="nn">Simulation.society</span> <span class="kn">import</span> <span class="n">Society</span>
 
-<span class="n">humano</span> <span class="o">=</span> <span class="n">Species</span><span class="p">(</span><span class="s1">&#39;Humano&#39;</span><span class="p">)</span>
+<span class="n">simulacion</span> <span class="o">=</span> <span class="n">Simulation</span><span class="p">(</span><span class="mi">3</span><span class="p">,</span><span class="mi">3</span><span class="p">)</span>
+<span class="n">simulacion</span><span class="o">.</span><span class="n">Re_Dimention_Map</span><span class="p">(</span><span class="mi">2</span><span class="p">,</span><span class="mi">2</span><span class="p">)</span>
 
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="p">)</span>
+<span class="p">(</span><span class="n">simulacion</span><span class="o">.</span><span class="n">actual_species</span><span class="p">,</span> <span class="n">simulacion</span><span class="o">.</span><span class="n">inter_dependences</span><span class="p">,</span> <span class="n">simulacion</span><span class="o">.</span><span class="n">map</span><span class="p">)</span>
 </pre></div>
 
      </div>
@@ -14618,14 +14619,12 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(&#39;Humano&#39;,
- {&#39;Poblacion&#39;: {&#39;summation&#39;: 0,
-   &#39;mean&#39;: 0,
-   &#39;initial&#39;: 10,
-   &#39;lower&#39;: 0,
-   &#39;upper&#39;: inf,
-   &#39;mutability&#39;: -1,
-   &#39;distr_function&#39;: None}})</pre>
+<pre>({},
+ [],
+ [[&lt;Simulation.land.Land at 0x18cac8cb7f0&gt;,
+   &lt;Simulation.land.Land at 0x18cac6389d0&gt;],
+  [&lt;Simulation.land.Land at 0x18cac638d90&gt;,
+   &lt;Simulation.land.Land at 0x18cac638df0&gt;]])</pre>
 </div>
 
 </div>
@@ -14641,20 +14640,19 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Caracter%C3%ADsticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter%C3%ADsticas">&#182;</a></h3><p>Las caracterísiticas en especies no son instancias de la clase Characterisitic, pues no es mas que los valores que se necesitan par isntanciar una a la vez que se cree una sociedad de esta especie.</p>
-<p>Para trabajas con las características se tienen los métodos:</p>
+<h3 id="Species">Species<a class="anchor-link" href="#Species">&#182;</a></h3><p>Se tiene guardado un diccionario de especies donde la llave es un string del nombre de la especie y el valor es la instancia.</p>
+<p>Para trabajas con las mismas existen los métodos:</p>
 <ul>
-<li><strong>Change_Characterisitic</strong>: Toma todos los valores iniciales para crear una característica y los guarda en un diccionario.</li>
-<li><strong>Change_Characterisitic_Value</strong>: Cambia el valor inicial de la característica.</li>
-<li><strong>Delete_Characcteristic</strong>: Elimina la característica de la lista.</li>
-<li><strong>Get_Characteristic_Summation</strong>: Obtiene la sumatioria de los valores de la característica en las sociedades que pertenecen a la especie.</li>
-<li><strong>Get_Characteristic_Mean</strong>: Obtiene la media de los valores de la característica en las sociedades que pertenecen a la especie.</li>
+<li><strong>Add_Species</strong>: Crea y añade una especie a la lista species</li>
+<li><strong>Delete_Species</strong>: Elimina una especie de la lista species</li>
+<li><strong>Change_Species_Characteristic</strong>: Añade o cambia el valor de una característia en una especie</li>
+<li><strong>Delete_Species_Characteristic</strong>: elimina una caracteristica de una especie</li>
 </ul>
 
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -14662,43 +14660,14 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
-
-<span class="n">cubano</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;cubano&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">taino</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;taino&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">2</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span>
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">20</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">10</span> <span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">simulacion</span><span class="o">.</span><span class="n">Add_Species</span><span class="p">(</span><span class="s1">&#39;Humano&#39;</span><span class="p">)</span>
+<span class="n">simulacion</span><span class="o">.</span><span class="n">Add_Species</span><span class="p">(</span><span class="s1">&#39;Marciano&#39;</span><span class="p">)</span>
+<span class="n">simulacion</span><span class="o">.</span><span class="n">Delete_Species</span><span class="p">(</span><span class="s1">&#39;Marciano&#39;</span><span class="p">)</span>
 </pre></div>
 
      </div>
 </div>
 </div>
-</div>
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-    
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[&nbsp;]:</div>
-
-
-
-
-<div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(True, True)</pre>
-</div>
-
-</div>
-
-</div>
-
 </div>
 
 </div>
@@ -14708,11 +14677,84 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Además tiene un método Copy que devuelve una copia de la instancia</p>
+<h3 id="Map">Map<a class="anchor-link" href="#Map">&#182;</a></h3><p>Map, como anetriormente fue mencionado, no es más que una matriz de terrenos, para acceder y trabajar con los terrenos que este contiene se implementarosn los métodos:</p>
+<ul>
+<li><strong>Change_Land_Characteristic</strong></li>
+<li><strong>Delete_Land_Characteristic</strong></li>
+<li><strong>Update_Land_Characteristic_Value</strong></li>
+<li><strong>Add_Land_Dependences</strong></li>
+<li><strong>Delete_Land_Dependences</strong></li>
+<li><strong>Change_Land_Dependences_Value</strong></li>
+<li><strong>Add_Land_Influences</strong></li>
+<li><strong>Delete_Land_Influences</strong></li>
+<li><strong>Change_Land_Influences_Value</strong></li>
+</ul>
+<p>y para trabajar con las sociedades de los terrenos del mapa se implementan los métodos:</p>
+<ul>
+<li><strong>Change_Society_Characteristic</strong></li>
+<li><strong>Delete_Society_Characteristic</strong></li>
+<li><strong>Update_Society_Characteristic_Value</strong></li>
+<li><strong>Add_Society</strong></li>
+<li><strong>Delete_Society</strong>
+Para cada uno de estos métodos se reciben parámetros q¡necesarios para ejecutar métodos de igual nombre en los terrenos o sociedades y se ejecutan</li>
+</ul>
+<p>Por último se tienen las interdependencias que nos son más que dependecias entre dos entidades de terrenos diferentes, para el trabajo con las mismas se puede usar:</p>
+<ul>
+<li><strong>Add_Inter_Dependences</strong>: Recibe posición, entidad y características de las dos características relacionadas seguido de un valor c y las funciones de suma y multiplicación y añade la dependencia a la lista inter_dependences</li>
+<li><strong>Delete_Inter_Dependences</strong>: Recibe posición, entidad y características de las dos características relacionadas y elimina la dependencia a la lista inter_dependences</li>
+<li><strong>Change_Inter_Dependences_Value</strong>: Recibe posición, entidad y características de las dos características relacionadas y cambia su valor.</li>
+</ul>
 
 </div>
 </div>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">simulacion</span><span class="o">.</span><span class="n">Add_Society</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="s2">&quot;habanero&quot;</span><span class="p">,</span><span class="s2">&quot;Humano&quot;</span><span class="p">)</span>
+<span class="n">simulacion</span><span class="o">.</span><span class="n">Add_Society</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="s2">&quot;pinareño&quot;</span><span class="p">,</span><span class="s2">&quot;Humano&quot;</span><span class="p">)</span>
+<span class="n">simulacion</span><span class="o">.</span><span class="n">Add_Inter_Dependence</span><span class="p">([</span><span class="mi">0</span><span class="p">,</span><span class="mi">0</span><span class="p">],</span><span class="s2">&quot;habanero&quot;</span><span class="p">,</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">,[</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">],</span><span class="s2">&quot;pinareño&quot;</span><span class="p">,</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">,</span><span class="mi">10</span><span class="p">)</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="Simulaci%C3%B3n-de-un-d%C3%ADa">Simulaci&#243;n de un d&#237;a<a class="anchor-link" href="#Simulaci%C3%B3n-de-un-d%C3%ADa">&#182;</a></h3><p>Para avanzar un día en la simulación se tiene el método <strong>Move_One_Day_All</strong> que lo que hace es mover un día en cada terreno, seguidamente por cada interdependecia.</p>
+<p>Para ello no se hace más que por cada <em>dependencia</em>, <em>influencia</em>, <em>interdependencia</em> ejecuta apollándonos en las funciones de distribución de cada caracterísitica, y las funciones de suma y multiplicación de cada dependencia para calcular los resultados.</p>
+
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">simulacion</span><span class="o">.</span><span class="n">Move_One_Day_All</span><span class="p">()</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div>
 </body>
 
