--- a/Documents/society_doc.html
+++ b/Documents/society_doc.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>species_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>society_doc</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14573,7 +14573,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Documentaci%C3%B3n-de-la-clase-Species">Documentaci&#243;n de la clase Species<a class="anchor-link" href="#Documentaci%C3%B3n-de-la-clase-Species">&#182;</a></h2><p>Con esta clase definimos nuestra "sociedad", esta consta de un <strong>nombre</strong> y <strong>características</strong>.</p>
+<h2 id="Documentaci%C3%B3n-de-la-clase-Society">Documentaci&#243;n de la clase Society<a class="anchor-link" href="#Documentaci%C3%B3n-de-la-clase-Society">&#182;</a></h2><p>Con esta clase definimos nuestra "sociedad", esta consta de un <strong>nombre</strong>, <strong>características</strong>, <strong>especie</strong>, <strong>posición</strong> en el terreno, y una instancia de <strong>evolución</strong>, además una variable para habilitar la misma.
+Evolution se explica en otro informe detalladamente.</p>
 
 </div>
 </div>
@@ -14589,12 +14590,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
 <span class="kn">from</span> <span class="nn">sys</span> <span class="kn">import</span> <span class="n">path</span>
 <span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">,</span><span class="n">os</span><span class="o">.</span><span class="n">pardir</span><span class="p">)))</span>
-<span class="kn">from</span> <span class="nn">Simulation.species</span> <span class="kn">import</span> <span class="n">Species</span>
 <span class="kn">from</span> <span class="nn">Simulation.society</span> <span class="kn">import</span> <span class="n">Society</span>
+<span class="kn">from</span> <span class="nn">Simulation.species</span> <span class="kn">import</span> <span class="n">Species</span>
 
-<span class="n">humano</span> <span class="o">=</span> <span class="n">Species</span><span class="p">(</span><span class="s1">&#39;Humano&#39;</span><span class="p">)</span>
+<span class="n">humanidad</span> <span class="o">=</span> <span class="n">Species</span><span class="p">(</span><span class="s2">&quot;humanidad&quot;</span><span class="p">)</span>
+<span class="n">society</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;cubano&quot;</span><span class="p">,</span> <span class="n">humanidad</span><span class="p">)</span>
 
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">name</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">characteristic</span><span class="p">)</span>
+<span class="p">(</span><span class="n">society</span><span class="o">.</span><span class="n">characteristic</span><span class="p">,</span> <span class="n">society</span><span class="o">.</span><span class="n">species</span><span class="p">,</span> <span class="n">society</span><span class="o">.</span><span class="n">evolution</span><span class="p">,</span> <span class="n">society</span><span class="o">.</span><span class="n">pos</span><span class="p">)</span>
 </pre></div>
 
      </div>
@@ -14618,14 +14620,10 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(&#39;Humano&#39;,
- {&#39;Poblacion&#39;: {&#39;summation&#39;: 0,
-   &#39;mean&#39;: 0,
-   &#39;initial&#39;: 10,
-   &#39;lower&#39;: 0,
-   &#39;upper&#39;: inf,
-   &#39;mutability&#39;: -1,
-   &#39;distr_function&#39;: None}})</pre>
+<pre>({&#39;Poblacion&#39;: &lt;Simulation.characteristic.Characteristic at 0x174707e9930&gt;},
+ &lt;Simulation.species.Species at 0x1746fd27cd0&gt;,
+ &lt;Simulation.evolution.Evolution at 0x174707e9960&gt;,
+ None)</pre>
 </div>
 
 </div>
@@ -14641,14 +14639,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Caracter%C3%ADsticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter%C3%ADsticas">&#182;</a></h3><p>Las caracterísiticas en especies no son instancias de la clase Characterisitic, pues no es mas que los valores que se necesitan par isntanciar una a la vez que se cree una sociedad de esta especie.</p>
-<p>Para trabajas con las características se tienen los métodos:</p>
+<h3 id="Caracter%C3%ADsticas">Caracter&#237;sticas<a class="anchor-link" href="#Caracter%C3%ADsticas">&#182;</a></h3><p>Una sociedad posee una lista de <strong>características</strong> propias como pueden ser <em>población</em>(por defecto para todas las sociedades y especies), <em>economía</em>, <em>política</em>, <em>natalidad</em>, etc.</p>
+<p>Para trabajar con las mismas se tiene los métodos:</p>
 <ul>
-<li><strong>Change_Characterisitic</strong>: Toma todos los valores iniciales para crear una característica y los guarda en un diccionario.</li>
-<li><strong>Change_Characterisitic_Value</strong>: Cambia el valor inicial de la característica.</li>
-<li><strong>Delete_Characcteristic</strong>: Elimina la característica de la lista.</li>
-<li><strong>Get_Characteristic_Summation</strong>: Obtiene la sumatioria de los valores de la característica en las sociedades que pertenecen a la especie.</li>
-<li><strong>Get_Characteristic_Mean</strong>: Obtiene la media de los valores de la característica en las sociedades que pertenecen a la especie.</li>
+<li><strong>Get_Characteristic_Value</strong> : recibe el nombre de la característica y devuelve el valor de la misma</li>
+<li><strong>Change_Characteristic</strong> : recibe todos los argumentos para crear una característica y la añade a la lista de características.</li>
+<li><strong>Delete_Characteristic</strong> : recibe el nombre de la característica y la elimina de la lista de caracterísiticas.</li>
+<li><strong>Update_Characteristic_Value</strong> : recibe nombre y nuevo valor, actualiza solo el valor de la características</li>
 </ul>
 
 </div>
@@ -14662,13 +14659,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">humano</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">0</span><span class="p">)</span>
-
-<span class="n">cubano</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;cubano&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">taino</span> <span class="o">=</span> <span class="n">Society</span><span class="p">(</span><span class="s2">&quot;taino&quot;</span><span class="p">,</span> <span class="n">humano</span><span class="p">)</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">2</span>
-<span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Tamaño&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">1</span>
-<span class="p">(</span><span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Summation</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">20</span><span class="p">,</span> <span class="n">humano</span><span class="o">.</span><span class="n">Get_Characteristic_Mean</span><span class="p">(</span><span class="s2">&quot;Poblacion&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="mi">10</span> <span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">society</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s2">&quot;politica&quot;</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">10</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="k">lambda</span> <span class="n">a</span><span class="p">:</span> <span class="n">a</span><span class="o">*</span><span class="mi">2</span><span class="p">)</span>
+<span class="n">society</span><span class="o">.</span><span class="n">Delete_Characteristic</span><span class="p">(</span><span class="s2">&quot;politica&quot;</span><span class="p">)</span>
+<span class="n">society</span><span class="o">.</span><span class="n">Change_Characteristic</span><span class="p">(</span><span class="s2">&quot;politica&quot;</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">0</span><span class="p">,</span><span class="mi">10</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
+<span class="n">society</span><span class="o">.</span><span class="n">Update_Characteristic_Value</span><span class="p">(</span><span class="s2">&quot;politica&quot;</span><span class="p">,</span><span class="mi">2</span><span class="p">)</span>
+<span class="n">society</span><span class="o">.</span><span class="n">Get_Characteristic_Value</span><span class="p">(</span><span class="s2">&quot;politica&quot;</span><span class="p">)</span>
 </pre></div>
 
      </div>
@@ -14692,7 +14687,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>(True, True)</pre>
+<pre>2</pre>
 </div>
 
 </div>
@@ -14708,7 +14703,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Además tiene un método Copy que devuelve una copia de la instancia</p>
+<p>Además tiene un método <strong>Copy</strong> que devuelve una copia de la sociedad.</p>
 
 </div>
 </div>
